@@ -88,6 +88,7 @@ Date:
 GMP:
   . Added gmp_binomial(n, k) for calculating binomial coefficients.
   . Added gmp_lcm(a, b) for calculating the least common multiple.
+  . Added gmp_perfect_power(a) to check if number is a perfect power.
 
 Intl:
   . Added void Spoofchecker::setRestrictionLevel(int $level) method, available
