@@ -50,6 +50,7 @@ PHP                                                                        NEWS
   . Export internal structures and accessor helpers for GMP object. (Sara)
   . Added gmp_binomial(n, k). (Nikita)
   . Added gmp_lcm(a, b). (Nikita)
+  . Added gmp_perfect_power(a). (Nikita)
 
 - intl:
   . Fixed bug #75317 (UConverter::setDestinationEncoding changes source instead 
